# nufft_biot

./: README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: GS_SOLOVEV_DESC_output.h5  plot_field_line_filament.py  plot_field_lines_torus.py  run_desc.py  run_desc_tokamak.ipynb
src/nufft_biot/: __init__.py  current.py  current_models.py  desc_interface.py  embedding.py  field.py  forward.py  geometry.py  objective.py  types.py
src/nufft_biot/utils/: __init__.py  fast_tracing.py  interpolation.py  tracing.py
tests/: test_current.py  test_field.py  test_field_biot_savart.py  test_geometry.py
