[project]
name = "nufft-biot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jax==0.6.0",
    "jax-finufft==1.2.0",
    "jaxlib==0.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
pytest = "pytest:console_main"

[tool.uv]
package = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:mlir.custom_call is deprecated:DeprecationWarning",
]
markers = [
    "slow: long-running, high-resolution physics validation tests"
]